# ISO-Integrity-check

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.py  test_main.py
.github/workflows/: build.yml  release.yml
CLI/: README.md  iso-integrity-check.ps1
legacy/cli/: README.md  iso-integrity-check.cmd
legacy/python/: README.md  test_main.py
resources/: app.rc  iso-integrity-check.desktop  resources.qrc
scripts/: build-appimage.sh  build-standalone.ps1  generate-compile-commands.ps1
src/cli/: main.cpp
src/core/: checksum.cpp  checksum.h  verifier.cpp  verifier.h
src/gui/: app_settings.cpp  app_settings.h  main.cpp  main_window.cpp  main_window.h  theme.cpp  theme.h  verification_controller.cpp  verification_controller.h
tests/: test_core.cpp
